The first step for doing chat

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
     </div>
         <div class="todo-app container">
             <div class="todo_create">
-                <input type="text" id="task_input" class="form-control" placeholder="Task text">
-                <button id="task_add" class="btn btn-primary"><img src="img/plus-lg.svg" alt="Add task"></button>
+                <input type="text" id="message_input" class="form-control" placeholder="Введіть повідомлення">
+                <button id="message_add" class="btn btn-primary"><img src="img/plus-lg.svg" alt="Add task"></button>
             </div>
             <div id="task_list">
             </div>
