--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ToDo List</title>
+    <title>Web Chat</title>
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="shortcut icon"
-        href="https://thumb1.shutterstock.com/mosaic_250/169597876/562785970/stock-vector-vector-illustration-with-tick-icon-562785970.jpg"
-        type="image/x-icon">
+  <link rel="icon" type="image/png" href="favicon.png" />
 
 </head>
 
@@ -31,17 +29,17 @@
         </div>
     </div>
         <div class="todo-app container">
-            <div class="todo_create">
+            <div class="webChat_input">
                 <input type="text" id="message_input" class="form-control" placeholder="Введіть повідомлення">
                 <button id="message_add" class="btn btn-primary"><img src="img/plus-lg.svg" alt="Add task"></button>
             </div>
-            <div id="task_list">
+            <div id="messages_list">
             </div>
             <p id="start_message">Повідомлень немає</p>
-            <!-- <div class="todo_create">
-                <button id="show_not_completed" class="btn btn-primary">Show not completed</button>
-                <button id="show_all" class="btn btn-primary">Show all</button>
-                <button id="delete_all" class="btn btn-danger">Delete all</button>
+            <!-- <div class="webChat_message">
+                <p class="messgae_user">User</p>
+                <p class="message_text">Text</p>
+                <p class="message_date">date</p>
             </div> -->
         </div>
     <script src="js/main.js"></script>
